# fin_cli

./: README.md  cargo.toml  run.sh  schema.sql
fin/: Cargo.toml
fin/src/: classify.rs  lib.rs  repository.rs  service.rs  string_err.rs
fin/src/entities/: category.rs  mod.rs  prelude.rs  rule.rs  transaction.rs
fin/src/service/: classify.rs  create.rs
fin_cli/: Cargo.toml
fin_cli/fixtures/: bendigo_transactions.csv  custom_transactions.csv
fin_cli/src/: adapter.rs  config.rs  main.rs
